alignment bug fix

--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -11,8 +11,7 @@ a:hover {
 }
 
 a.login-signup {
-    margin-right: 10%;
-    float: right;
+    margin-left: 55%;
 }
 
 body{
